Fix drawer overlay z-index issue

--- a/app/widgets/frame/_index.scss
+++ b/app/widgets/frame/_index.scss
@@ -109,13 +109,6 @@
   }
 }
 
-#header {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 2000;
-}
-
 #tabs {
   position: absolute;
   bottom: 0;
